# LLM-r

./: .gitignore  README.md  install.sh  pyproject.toml
.claude/: settings.local.json
.github/: ABOUT_BOX.md
.github/workflows/: pages.yml  release.yml
.llmr/: plans.json  sessions.json
backend/: main.py
docs/: ABLETON-LIVE-FUNCTIONALITY-AUDIT-PLAN.md  CAPABILITIES.md  COMPATIBILITY.md  DEVELOPMENT_PLAN.md  GITHUB-ABOUT-BOX.md  GUI-PLUGIN.md  LIVE-STATE-MODEL.md  LLM_ASSISTANT_PROMPT.md  MACROS.md  MODELITO-PR-PATCH-PLAN.md  MODELITO.md  RELEASE.md  ROADMAP.md  SAFETY-POLICY.md  SCENARIOS.md  SECURITY.md  USER_MANUAL.md  index.html  research-notes.md
gui/: pyqt_app.py
llmr/: LLM_ASSISTANT_PROMPT.md  __init__.py  ableton_osc.py  app.py  config.py  executor.py  macros.py  modelito_adapter.py  planner.py  prompts.py  schemas.py  sessions.py
native/vst3/: llmr_vst3_plugin.cpp  llmr_vst3_stub.c
scripts/: build_plugin.sh  build_release.sh  build_vst3.sh  install_plugin.sh  install_vst3.sh  test_install_vst3_and_open.sh
test_assets/vst3/TestPlugin.vst3/Contents/: Info.plist
test_assets/vst3/TestPlugin.vst3/Contents/Resources/: README.txt
tests/: test_ableton_osc.py  test_api.py  test_modelito_adapter.py  test_planner.py
web/: index.html
