[project]
name = "llm-r"
version = "1.4.0"
description = "LLM-r: Ableton Live + LLM bridge powered by modelito"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "python-osc>=1.9.0",
  "jinja2>=3.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

