[project]
name = "llm-r"
version = "0.6.3"
description = "LLM-r bridges Ableton Live and LLM agents"
requires-python = ">=3.11"
authors = [ { name = "Tomas Laurenzo" } ]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "fastapi>=0.115.0",
  "modelito @ git+https://github.com/krahd/modelito.git@f6db8b41a9a31f6e473020f8304cddec8a196252",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "python-osc>=1.9.0",
]

[project.optional-dependencies]
gui = [
  "PyQt6>=6.7.0"
]

dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
include = ["llmr*"]

[tool.setuptools.package-data]
llmr = ["LLM_ASSISTANT_PROMPT.md"]

[tool.ruff]
line-length = 100
